# Fluxora-Contracts

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE_STREAM_E2E_IMPLEMENTATION.md  PAUSE_RESUME_TESTS.md  README.md  SAME_LEDGER_ADMIN_ROTATION_TESTS.md  SENDER_INDEX_IMPLEMENTATION.md  TEST_EXECUTION_REPORT.md  TODO.md  check-dup.js  close_completed_stream_integration_tests.rs  fix_all_calls.py  fix_calls.sh  fix_test.py  how --name-only HEAD  package-lock.json  rust-toolchain.toml  validate.js
.github/workflows/: ci.yml
Fluxora-Contracts/: PAUSE_RESUME_PR_READY.md  PAUSE_RESUME_TRANSITIONS_TESTS.md
Fluxora-Contracts/contracts/stream/src/: lib.rs  test_issue_39.rs
Fluxora-Contracts/contracts/stream/tests/: dust_threshold.rs  integration_suite.rs  sep41_matrix.rs  state_machine_transitions.rs
Fluxora-Contracts/docs/: error.md  events.md  state-machine.md  streaming.md  token-assumptions.md
backend/: openapi.yaml  package-lock.json  package.json  tsconfig.test.json
backend/database/migrations/: 035_add_unique_dismiss_index.sql
backend/src/: index.ts
backend/src/models/: RecommendationEvent.ts
backend/src/redis/: webhookCircuitBreakerStore.ts
backend/src/routes/: streams.ts
backend/src/services/: recommendation.service.ts
backend/src/utils/: errors.ts
backend/src/websockets/: streamChannel.ts
backend/src/ws/: hub.ts
backend/tests/: websocket.test.ts  ws.test.ts
backend/tests/routes/: streams.test.ts
backend/tests/services/: recommendation.service.test.ts
backend/tests/webhooks/: circuitBreaker.store.test.ts
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
contracts/factory/tests/: adversarial_auth.rs  batch_pause_gate.rs  factory_error_discriminants.rs  factory_init_security.rs  factory_setters.rs  factory_stream_e2e.rs  integration_suite.rs  registry_ttl.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/governance/tests/: gas_regression.rs  signer_index_proptest.proptest-regressions  signer_index_proptest.rs
contracts/stream/: Cargo.toml  fix_duplicates.py
contracts/stream/src/: accrual.rs  checksum.rs  delegation.rs  events.rs  lib.rs  storage.rs  test.rs  test_issue_39.rs  test_token_edge_cases.rs  test_withdrawable_props.rs  token_check.rs  types.rs
contracts/stream/test_snapshots/test/: test_admin_can_resume_stream.1.json  test_calculate_accrued_after_cliff.1.json  test_calculate_accrued_at_start.1.json  test_calculate_accrued_before_cliff_returns_zero.1.json  test_calculate_accrued_capped_at_deposit.1.json  test_calculate_accrued_exactly_at_cliff.1.json  test_calculate_accrued_max_values.1.json  test_calculate_accrued_mid_stream.1.json  test_calculate_accrued_overflow_protection.1.json  test_cancel_already_cancelled_panics.1.json  test_cancel_completed_stream_panics.1.json  test_cancel_fully_accrued_no_refund.1.json  test_cancel_paused_stream.1.json  test_cancel_stream_as_admin.1.json  test_cancel_stream_full_refund.1.json  test_cancel_stream_partial_refund.1.json  test_create_stream_edge_cliffs.1.json  test_create_stream_initial_state.1.json  test_get_stream_state_all_statuses.1.json  test_multiple_streams_independent.1.json  test_pause_already_paused_panics.1.json  test_pause_and_resume.1.json  test_resume_active_stream_panics.1.json  test_withdraw_after_cancel_gets_accrued_amount.1.json  test_withdraw_already_completed_panics.1.json  test_withdraw_before_cliff_panics.1.json  test_withdraw_completed.1.json  test_withdraw_completed_in_batch.1.json  test_withdraw_completed_panic.1.json  test_withdraw_from_paused_stream_completes_if_full.1.json  test_withdraw_full_completes_stream.1.json  test_withdraw_mid_stream.1.json  test_withdraw_multiple_times.1.json  test_withdraw_nothing_panics.1.json  test_withdraw_partial_stays_active.1.json  test_withdraw_requires_recipient_authorization.1.json  test_withdraw_twice_after_cancel_panics.1.json
contracts/stream/tests/: adaptive_ttl.rs  adversarial_auth.rs  auto_claim.rs  balance_conservation.rs  batch_recipient_cache.rs  batch_withdraw_to.rs  batch_withdraw_to_auth.rs  bulk_cancel.rs  bulk_resume_as_admin.rs  chaos.rs  cliff_only_variant.rs  clock_monotonicity.rs  clone_stream.rs  close_guard_paths.rs  create_stream_relative.rs  delegation.rs  dust_threshold.rs  event_snapshots_suite.rs  factory_fuzz.rs  factory_policy.rs  formal_verification_smoke.rs  gas_regression.rs  governance_executor_e2e.rs  governance_integration.rs  governance_proptest.rs  governance_ttl.rs  health_matrix.rs  id_range.rs  id_reservation.rs  integration_suite.rs  keeper_cancel.rs  liability_invariant.rs  max_rate_per_second.rs  metadata_extension.rs  paused_stream_count.rs  pooled_stream.rs  rate_bounds.rs  rate_decrease_after_withdraw.rs  recipient_paged_index.rs  recipient_update_state_machine.rs  (+8 more)
docs/: ABI_STABILITY.md  DEPLOYMENT.md  audit.md  cancel-stream-semantics.md  capabilities.md  dust-threshold.md  error.md  events.md  extend-underfunding-fix.md  factory.md  formal-verification.md  gas.md  global-resume.md  governance.md  maintainer-security-checklist.md  recipient-stream-index.md  security.md  sender-stream-index.md  snapshot-security-diff.md  snapshot-test-coverage-matrix.md  snapshot-workflow-quick-reference.md  storage.md  streaming.md  test-coverage.md  token-assumptions.md  upgrade.md
script/: check-discriminant-collisions.py  check-wasm-size-budget.sh  check_snapshot_diff.py  validate-doc-alignment.py  validate_gas.py  verify-wasm-checksum.sh  verify_rust_version.py
tests/: test_check_discriminant_collisions.py  test_check_snapshot_diff.py  test_rust_toolchain_pin.py  test_validate_gas.py  test_validator.py  test_wasm_size_budget.py
wasm/: checksums.sha256
